<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/pic3"
    tools:context="uel.vteam.belovedhostel.view.LoginActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/activity_login_margintop">

        <EditText
            android:layout_height="match_parent"
            android:ems="10"
            android:id="@+id/editEmailAddress"
            android:hint="@string/hint_email"
            android:textColorHint="#8B8989"
            android:layout_gravity="center_horizontal"
            android:inputType="text|textEmailAddress"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@null"
            tools:ignore="NestedWeights" />
        <Button
            android:visibility="invisible"
            android:text="@string/button_cleartext_label"
            android:layout_height="wrap_content"
            android:id="@+id/btnClearText1"
            android:background="@null"
            android:layout_width="40dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/textView8"
        android:background="#000000" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_vertical">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:id="@+id/editPassWord"
            android:hint="@string/hint_password"
            android:textColorHint="#8B8989"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:background="@null"
            tools:ignore="NestedWeights" />

        <Button
            android:text="@string/button_cleartext_label"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:id="@+id/btnClearText2"
            android:background="@null"
            android:layout_width="40dp" />

        <Button
            android:text="@string/button_showpass"
            android:layout_width="46dp"
            android:layout_height="match_parent"
            android:id="@+id/btnShowPass"
            android:background="@null" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/textView30"
        android:layout_weight="0"
        android:background="#000000" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNotify"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal"
            android:textColor="#fa2727" />
    </LinearLayout>

    <CheckBox
        android:text="@string/login_activity_checkbox_savepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxSavePass"
        android:layout_weight="0" />

    <Button
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_height="40dp"
        android:text="@string/button_login"
        android:id="@+id/btnLogin"
        android:background="@drawable/selector_button_blue_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="140dp" />
</LinearLayout>
